fix broken image

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@
 }
 
 body {
-background: url(http://allians-mebel.ru/wp-content/uploads/2017/06/KruglayKrishka_MASSIV.jpg) round;
+background: url(https://github.com/nanashinogonbee/want2eat/raw/master/bg.jpg) round;
 background-size: 25%;
 }
 
